# othello

./: Cargo.toml
src/: agentid.rs  lib.rs
src/board/: actioniter.rs  board.rs  display.rs  environment.rs  hash.rs  mod.rs  partial_eq.rs  position_iter.rs  utils.rs
src/rewards/: greedy.rs  mod.rs  weighted_board.rs
src/rewards/weighted_board/: display.rs  genetic.rs  mod.rs  weighted_board.rs
