[package]
name = "othello"
version = "0.1.0"
authors = ["prangel-git <62568827+prangel-git@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
    debug = true

[dependencies]
    rand = "0.8"
    bitvec = "0.22"

    # gts = {git = "https://github.com/prangel-git/gts.git", branch = "main"}
    gts = {path = "../gts"}

    # genetic = {git = "https://github.com/prangel-git/genetic", branch = "main"}
    genetic = {path = "../genetic"}